dnl This file is used as input to autoconf to generate configure.
dnl The only reason we need this is that the Tk directory structure
dnl changed in 7.5, and this change lets us avoid changing the
dnl configuration superstructure.
dnl Tom Tromey <tromey@cygnus.com>

AC_PREREQ(2.5)

AC_INIT(generic/tk.h)

AC_CANONICAL_HOST

# Convert --enable-shared-tcl-tk to --enable-shared for the subdir
ac_configure_args=`echo "$ac_configure_args" | sed "s,--enable-shared-tcl-tk,--enable-shared,g"`

case "${host}" in
*cygwin* | *mingw32* | *windows32*)
	CONFIGDIR="win"
	AC_CONFIG_SUBDIRS("win")
	;;
*)
	CONFIGDIR="unix"
	AC_CONFIG_SUBDIRS("unix")
	AC_CONFIG_AUX_DIR("unix")	
	;;
esac

AC_SUBST(CONFIGDIR)
AC_PROG_MAKE_SET
AC_OUTPUT(Makefile)

